# relivo-be

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-dev.yaml  deploy-prod.yaml  docker-publish.yml  presubmit.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: chat_request_api.md  chat_stream_reference.md  chat_stream_reference.sse  conversation_api.md  upload_api.md  vercel_ai_sdk_chat_integration.md
migrations/: 0001_create_conversations.sql  0002_create_user_files.sql  0003_create_memories.sql
scripts/: apply_migrations.py
src/: __init__.py  app_config.py  database.py  main.py
src/agents/: __init__.py  base_agent.py  echo_agent.py  orchestrator.py
src/controllers/: __init__.py  chat_controller.py  conversation_controller.py  health_controller.py  user_file_controller.py
src/db/: database.py  models.py
src/models/: __init__.py  common.py  conversation.py  memory.py  message.py  user_file.py
src/prompts/: orchestrator.md
src/routes/: __init__.py  chat.py  conversation.py  conversations.py  (+2 more)
tests/: test_base_agent.py  test_chat_route.py  test_chat_service.py  test_chat_tools.py  test_conversation_route.py  test_conversation_service.py  test_data_protocol.py  test_db_models.py  test_file_tools.py  test_health.py  test_health_route.py  test_heartbeat_wrapper.py  test_memory_extraction_service.py  test_memory_tools.py  test_schemas.py  test_stream_registry.py  test_user_file_route.py  test_user_file_service.py
(+28 files in other folders)
