[project]
name = "relivo-be-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "click==8.3.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "fastapi==0.135.3",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn[standard]==0.43.0",
    "uvloop==0.22.1 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchfiles==1.1.1",
    "websockets==16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
